# nifipilot-agents

./: .env.example  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
agents/sub_agents/: builder_agent.py  monitor_agent.py
skills/: nifipilot-agent.md
